# dockstore-webservice/src/main/resources/swagger.yaml
@@ -4726,12 +4726,8 @@ paths:
         required: false
         type: "string"
       responses:
-        200:
+        default:
           description: "successful operation"
-          schema:
-            type: "array"
-            items:
-              $ref: "#/definitions/Workflow"
       security:
       - BEARER: []
   /workflows/hostedEntry:
